--- a/templates/home.html
+++ b/templates/home.html
@@ -12,5 +12,7 @@
     <a href="/">home</a>
     <h3>API guide</h3>
     <p>access subdomain 'table-data' and 'table2-data' to retrieve data directly</p>
+    <p>stock image</p>
+    <img alt="stock" src="{{ url_for('static', filename='stock.png') }}"></img>
 </body>
 </html>
